Correct positioning of numbers on small step by step list

--- a/app/assets/sass/prototypes/_step-by-step.scss
+++ b/app/assets/sass/prototypes/_step-by-step.scss
@@ -208,7 +208,7 @@
             width: 25px;
             text-align: center;
             font-weight: 600;
-            line-height: 0;
+            line-height: 20px;
             font-size: 14px;
             @media (min-width: 641px) { 
                 top: 15px;
